Fix footer nav item spacing

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -18,7 +18,7 @@ footer.footer {
       display: flex;
       flex-direction: row;
       justify-content: space-evenly;
-      width: 40%;
+      width: 55%;
       margin: auto;
 
       a {
